chore: add Docker support for frontend (closes #1)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,11 @@ services:
 
   redis:
     image: redis:latest
+
+  frontend:
+    build: ./frontend
+    volumes:
+      - ./frontend:/home/node/frontend
+      - /home/node/frontend/node_modules
+    ports:
+      - "3000:3000"
