--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 channels-redis==4.2.0
 daphne==4.1.2
+django-cors-headers==4.3.1
 django-extensions==3.2.3
+djangorestframework==3.15.1
 fqdn==1.5.1
 isoduration==20.11.0
 jsonpointer==2.4
